--- a/index.html
+++ b/index.html
@@ -30,6 +30,27 @@
 
         <footer>
             <p>VAULT-TEC INDUSTRIES - "Prepare for the Future"</p>
+            <div class="legal-section">
+                <p><strong>Legal Disclaimer:</strong></p>
+                <p>
+                    Fallout is a registered trademark of Bethesda Softworks LLC, a ZeniMax Media company.
+                    The Fallout TV series is produced by Kilter Films and Amazon Studios for Prime Video.
+                </p>
+                <p>
+                    This is an unofficial fan-made reference guide created for educational and entertainment purposes only.
+                    All game content, lore, characters, and imagery referenced herein are the property of their respective owners,
+                    including but not limited to Bethesda Softworks, ZeniMax Media, Interplay Entertainment, Obsidian Entertainment,
+                    Amazon Studios, and Kilter Films.
+                </p>
+                <p>
+                    This project is not affiliated with, endorsed by, or sponsored by Bethesda Softworks, ZeniMax Media,
+                    Microsoft Corporation, Amazon, or any of their subsidiaries or affiliates.
+                </p>
+                <p>
+                    All trademarks and copyrights are the property of their respective owners.
+                    No copyright infringement is intended.
+                </p>
+            </div>
         </footer>
     </div>
 
