--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
         </footer>
     </div>
 
+    <script src="icons.js"></script>
     <script src="factions-data.js"></script>
     <script src="app.js"></script>
 </body>
