--- a/index.html
+++ b/index.html
@@ -16,6 +16,49 @@
         </header>
 
         <main>
+            <section class="faction-map" id="faction-map">
+                <h2 class="map-title">// FACTION TERRITORY MAP //</h2>
+                <div class="map-container">
+                    <svg viewBox="0 0 960 600" class="usa-map" id="usa-map">
+                        <!-- Simplified USA outline -->
+                        <path class="usa-outline" d="M158 130 L240 125 L280 130 L310 125 L340 135 L380 130 L420 128 L460 130 L500 125 L540 130 L580 125 L620 130 L660 135 L700 130 L740 140 L780 145 L820 160 L850 180 L870 200 L880 230 L885 260 L880 290 L870 320 L850 350 L830 380 L800 400 L770 420 L740 435 L700 445 L660 450 L620 455 L580 450 L540 455 L500 450 L460 455 L420 450 L380 455 L340 450 L300 460 L260 470 L220 480 L180 485 L140 475 L110 460 L85 440 L70 410 L60 380 L55 340 L60 300 L70 260 L85 220 L100 190 L120 160 L140 140 Z"/>
+
+                        <!-- State divider lines (simplified) -->
+                        <g class="state-lines">
+                            <line x1="200" y1="130" x2="200" y2="380"/>
+                            <line x1="280" y1="130" x2="280" y2="420"/>
+                            <line x1="360" y1="130" x2="360" y2="450"/>
+                            <line x1="440" y1="130" x2="440" y2="450"/>
+                            <line x1="520" y1="130" x2="520" y2="455"/>
+                            <line x1="600" y1="130" x2="600" y2="455"/>
+                            <line x1="680" y1="130" x2="680" y2="450"/>
+                            <line x1="760" y1="145" x2="760" y2="430"/>
+                        </g>
+
+                        <!-- Region labels -->
+                        <g class="region-labels">
+                            <text x="160" y="280" class="region-label">WEST COAST</text>
+                            <text x="400" y="350" class="region-label">MOJAVE</text>
+                            <text x="550" y="280" class="region-label">MIDWEST</text>
+                            <text x="720" y="240" class="region-label">CAPITAL WASTELAND</text>
+                            <text x="800" y="180" class="region-label">COMMONWEALTH</text>
+                            <text x="680" y="380" class="region-label">APPALACHIA</text>
+                        </g>
+
+                        <!-- Faction markers will be added by JavaScript -->
+                        <g id="faction-markers"></g>
+                    </svg>
+
+                    <div class="map-legend" id="map-legend">
+                        <h3>LEGEND</h3>
+                        <div class="legend-items" id="legend-items">
+                            <!-- Legend items populated by JavaScript -->
+                        </div>
+                    </div>
+                </div>
+                <p class="map-note">[ CLICK A MARKER TO VIEW FACTION DETAILS ]</p>
+            </section>
+
             <section class="factions-grid" id="factions-grid">
                 <!-- Factions will be populated by JavaScript -->
             </section>
